--- a/macarons_shop/index.html
+++ b/macarons_shop/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="assets/index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
     <title>Templates CSS</title>
@@ -17,7 +17,7 @@
                 </ul>
             </div>
             <div class="logo-nav">
-                <a href="#"><img id="macaron-logo" src="LogoMakr-6ZJcik.png"></a>
+                <a href="#"><img id="macaron-logo" src="assets/LogoMakr-6ZJcik.png"></a>
             </div>
             <div class="right-nav nav">
                 <ul>
