started mobile design

--- a/interior_design/index.html
+++ b/interior_design/index.html
@@ -12,6 +12,10 @@
 
 <!-- Next steps: 
     1. add underline to nav (whenever it is hovered)
+    2. figure out how to get javascript to work with smaller screensize
+    3. change small circle images every 5 secs?
+    4. change colors to make it look better
+    5. fix the slide for mobile
 -->
 <body>
     <div class="container">
@@ -20,7 +24,7 @@
                 <div class="nav">
                     <ul>
                         <!-- <div class="nav-logo"><img src="assets/LogoMakr-6ZfUyY.png" alt="house logo"></div> -->
-                        <div class="nav-logo"><img src="assets/LogoMakr-1Pwpnz.png" alt="house logo"></div>
+                        <li class="nav-logo"><img src="assets/LogoMakr-1Pwpnz.png" alt="house logo"></li>
                         <li><a href="">about us</a></li>
                         <li><a href="">portfolio</a></li>
                         <li><a href="">shop</a></li>
