--- a/interior_design/index.html
+++ b/interior_design/index.html
@@ -35,11 +35,11 @@
             </nav>
             <div class="pic-showcase-container">
                 <div class="pic-container"> 
-                    <img src="assets/nathan-fertig-FBXuXp57eM0-unsplash.jpg" alt="interior design photo" class="pics pic1">
-                    <img src="assets/roberto-nickson-tleCJiDOri0-unsplash.jpg" alt="living room photo" class="pics pic2">
-                    <img src="assets/creatv-eight-RryFk4n-vOs-unsplash.jpg" alt="living room photo" class="pics pic2">
-                    <img src="assets/ashley-byrd-eRbOiQ4s5_g-unsplash.jpg" alt="living room photo" class="pics pic2">
-                    <img src="assets/sidekix-media-lrk0l9w8rI0-unsplash.jpg" alt="living room photo" class="pics pic2">
+                    <img src="https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_1000/v1607377422/interiordesign/nathan-fertig-FBXuXp57eM0-unsplash_oyq5u5.jpg" alt="interior design photo" class="pics pic1">
+                    <img src="https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_1000/v1607377421/interiordesign/sidekix-media-lrk0l9w8rI0-unsplash_lql3f3.jpg" alt="living room photo" class="pics pic2">
+                    <img src="https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_1000/v1607377421/interiordesign/roberto-nickson-tleCJiDOri0-unsplash_gvbm3u.jpg" alt="living room photo" class="pics pic2">
+                    <img src="https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_1000/v1607377413/interiordesign/creatv-eight-RryFk4n-vOs-unsplash_gzng4z.jpg" alt="living room photo" class="pics pic2">
+                    <img src="https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_1000/v1607377412/interiordesign/ashley-byrd-eRbOiQ4s5_g-unsplash_e2tx81.jpg" alt="living room photo" class="pics pic2">
                 </div>
                 <div class="pic-controller">
                     <div class="arrow-up arrow"><i class="fas fa-arrow-up"></i></div>
@@ -62,17 +62,17 @@
                 <h1>Interior <span class="second-line"> Design</span></h1>
                 <div class="room-options-container">
                     <figure class="room-option">
-                        <img src="assets/creatv-eight-RryFk4n-vOs-unsplash.jpg" alt="kitchen" class="kitchen room-image">
+                        <img src="https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_450/v1607377413/interiordesign/creatv-eight-RryFk4n-vOs-unsplash_gzng4z.jpg" alt="kitchen" class="kitchen room-image">
                         <figcaption>Kitchen</figcaption>
                     </figure>
                     <div class="divider"></div>
                     <figure class="room-option">
-                            <img src="assets/ashley-byrd-eRbOiQ4s5_g-unsplash.jpg" alt="bedroom" class="room-image bedroom">
+                            <img src="https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_450/v1607377412/interiordesign/ashley-byrd-eRbOiQ4s5_g-unsplash_e2tx81.jpg" alt="bedroom" class="room-image bedroom">
                         <figcaption>Bedroom</figcaption>
                     </figure>                
                     <div class="divider"></div>
                     <figure class="room-option">
-                        <img src="assets/sidekix-media-lrk0l9w8rI0-unsplash.jpg" alt="living room" class="room-image living-room">
+                        <img src="https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_450/v1607377421/interiordesign/sidekix-media-lrk0l9w8rI0-unsplash_lql3f3.jpg" alt="living room" class="room-image living-room">
                         <figcaption>Living Room</figcaption>
                     </figure>
                 </div>
