--- a/macarons_shop/index.html
+++ b/macarons_shop/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,63 +9,75 @@
     <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
     <title>Templates CSS</title>
 </head>
-    <section class="top-section">
-        <nav>
-            <div class="left-nav nav">
-                <ul>
-                    <li><a>Choose a flavor</a></li>
-                    <li><a>Buy</a></li>
-                </ul>
-            </div>
-            <div class="logo-nav">
-                <a href="#"><img id="macaron-logo" src="assets/LogoMakr-6ZJcik.png"></a>
-            </div>
-            <div class="right-nav nav">
-                <ul>
-                    <li><a>Delivery</a></li>
-                    <li><a>About us</a></li>
-                </ul>
-            </div>
-        </nav>
-    </section>
-
-    <section class="middle-section">
-        <div id="wrap">
-            <div id="wave">
-                <svg width="0" height="0">
-                    <defs>
-                        <clipPath id="myClip" clipPathUnits="objectBoundingBox">
-                            <path d="M0.001,0.939 V0.231 C0.001,0.231,0.071,0.356,0.216,0.356 C0.361,0.356,0.579,0.14,0.611,0.117 C0.643,0.095,0.769,-0.009,0.865,0.004 C0.962,0.018,1,0.069,1,0.069 V0.688 C1,0.688,0.889,0.633,0.765,0.676 C0.64,0.718,0.533,0.831,0.41,0.91 C0.287,0.989,0.238,1,0.156,1 C0.074,1,0.001,0.939,0.001,0.939"/>
-                        </clipPath>
-                    </defs>
-                </svg>
-            </div> 
+<section class="top-section">
+    <nav>
+        <div class="left-nav nav">
+            <ul>
+                <li><a>Choose a flavor</a></li>
+                <li><a>Buy</a></li>
+            </ul>
         </div>
-    </section>
-
-    <section class="bottom-section">
-        <div class="bottom-text">
-            <p>
-                Yes, classic macaron cookies are fun to make, but there's a whole world of flavor options out there. The best place to start that adventure is with these cookie cookbooks that are easy to follow and fun to explore.
-            </p>
-            <h1>
-                Cakes
-                    <span class="and">
-                        &
-                    </span>
-                    <span class="cookies">
-                        Cookies
-                    </span>
-            </h1>
+        <div class="logo-nav">
+            <a href="#">
+                <img id="macaron-logo"
+                    src="https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_100/v1611520491/LogoMakr-6ZJcik_ps5ltr.png"
+                    alt="A macaron logo">
+            </a>
         </div>
-        <div class="bottom-image">
+        <div class="right-nav nav">
+            <ul>
+                <li><a>Delivery</a></li>
+                <li><a>About us</a></li>
+            </ul>
         </div>
-    </section>
+    </nav>
+</section>
 
-    <footer>
-        <a href="logomakr.com">Logo from LogoMakr.com.</a>
-        <a href="https://unsplash.com/s/photos/cookies-white-background?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Photo by Mae Mu on Unsplash</a>
-        <a href="https://www.behance.net/gallery/90689147/S?tracking_source=search_projects_recommended%7Capp%20web%20web">Inspired by Natalee Owen on behace.net</a>
-    </footer>
+<section class="middle-section">
+    <div id="wrap">
+        <div id="wave"
+            style='background-image: url("https://res.cloudinary.com/djv69vvs7/image/upload/c_scale,w_2131/v1611520484/mockaroon-5B-CcdKM9LA-unsplash_loymya.jpg")'>
+            <svg width="0" height="0">
+                <defs>
+                    <clipPath id="myClip" clipPathUnits="objectBoundingBox">
+                        <path
+                            d="M0.001,0.939 V0.231 C0.001,0.231,0.071,0.356,0.216,0.356 C0.361,0.356,0.579,0.14,0.611,0.117 C0.643,0.095,0.769,-0.009,0.865,0.004 C0.962,0.018,1,0.069,1,0.069 V0.688 C1,0.688,0.889,0.633,0.765,0.676 C0.64,0.718,0.533,0.831,0.41,0.91 C0.287,0.989,0.238,1,0.156,1 C0.074,1,0.001,0.939,0.001,0.939" />
+                    </clipPath>
+                </defs>
+            </svg>
+        </div>
+    </div>
+</section>
+
+<section class="bottom-section">
+    <div class="bottom-text">
+        <p>
+            Yes, classic macaron cookies are fun to make, but there's a whole world of flavor options out there. The
+            best place to start that adventure is with these cookie cookbooks that are easy to follow and fun to
+            explore.
+        </p>
+        <h1>
+            Cakes
+            <span class="and">
+                &
+            </span>
+            <span class="cookies">
+                Cookies
+            </span>
+        </h1>
+    </div>
+    <div class="bottom-image">
+    </div>
+</section>
+
+<footer>
+    <a href="logomakr.com">Logo from LogoMakr.com.</a>
+    <a
+        href="https://unsplash.com/s/photos/cookies-white-background?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Photo
+        by Mae Mu on Unsplash</a>
+    <a href="https://www.behance.net/gallery/90689147/S?tracking_source=search_projects_recommended%7Capp%20web%20web">Inspired
+        by Natalee Owen on behace.net</a>
+</footer>
 </body>
+
 </html>
